Use Vercel Postgres to store characters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
 [project]
 name = "thy-name"
 dependencies = [
-  "ruff",
+  "alembic",
+  "psycopg2-binary",
+  "pydantic",
   "python-fasthtml",
+  "ruff",
+  "sqlalchemy",
 ]
